--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "mongoose": "^5.10.6",
     "node-fetch": "^2.6.0",
     "node-youtube-search": "^1.0.4"
   }
